# sxh-soloCoder-1153

pyrefactor/: default_config.yaml  pyproject.toml
pyrefactor/pyrefactor/: analyzer.py  cli.py  config.py  models.py  pragma.py  report.py  vcs.py
pyrefactor/pyrefactor/detectors/: __init__.py  base.py  complex_condition.py  duplicate_code.py  long_function.py  temporary_field.py
pyrefactor/pyrefactor/refactor/: __init__.py  extract_method.py
